# lemma

./: .gitignore  AGENTS.md  DB_EXTENSION_PATHS.md  Makefile  README.md  TODOS.md  TODOs.md  article_draft.tex  benchmark_duckdb.py  conftest.py  pyproject.toml  run_experiments.py  writeup_plan.md
data/benchmarks/: scaling_results.json
data/tpch-sf1/: README.md  dataset_meta.json
db_extension/: AGENT.md  DEMO.md  dataset_config.py  optimizer.py  plan.md  prepare_data.py  run_optimizer.py  test_extension.py  utils.py
db_extension/agent/: __init__.py  config.py  docker_runner.py  extract.py  harness.py  profile.py  sql_gate.py  template_runquery.dfy  tools_worker.py
db_extension/src/: lemma.cpp
db_extension/tests/: test_agent_extract.py  test_agent_sql_gate.py  test_tools_worker_paths.py
db_extension_lease/: README.md
db_extension_lease/agent/: AGENTS.md
db_extension_paths/: README.md  catalog.py  check_mem.sh  dataset_config.py  duckdb_memory.py  e2e_paths_h1.json  measure_e2e_cached_rerun.py  measure_e2e_paths.py  measure_pin_h1.py  run_experiment.py
db_extension_paths/agent/: AGENTS.md
db_extension_paths/src/: lemma.cpp  lemma_pin.cpp  lemma_stream.cpp  lemma_stream.h
db_extension_runtime/: Makefile  README.md
db_extension_runtime/agent/: AGENTS.md
db_extension_runtime/rust_bridge/: Cargo.toml
db_extension_runtime/rust_bridge/src/: lib.rs
db_extension_storage/: README.md
db_extension_storage/agent/: AGENTS.md
db_extension_storage/rust_bridge/: Cargo.toml  build.rs
db_extension_storage/src/: lemma_storage.cpp
docker/agent/: Dockerfile  entrypoint.sh  install-agents.sh
docs/verus/: basic_sql_primer.md
holdout/gendb_sec_edgar/: README.md  SOURCE.md  generate_ground_truth.py  generate_queries.py  load_data.py  queries.sql  queries_all.sql  schema.sql  setup_data.sh  smoke_session_hot.py  synth_tiny.py
research_loop/: AGENT_SANDBOX.md  COMPILATION_GUIDE.md  README.md  _transpiler.py  admit_runquery.py  agent_context.py  agent_sandbox.py  agent_scratchpad.md  assemble_runquery.py  assemble_verified_program.py  basic_sql_extended_fixtures.py  basic_sql_join_fixtures.py  basic_sql_set_cte_fixtures.py  benchmark_runqueries.py  benchmark_scaling.py  benchmark_verified.py  config.env  harness.py  harness_legacy.py  lemma_flags.py  native.dfy  pipeline_demo.py  pipeline_log.py  postprocessor.py  ssb_queries.py  ssb_workload.py  test_admit_runquery.py  test_assemble_runquery.py  test_postprocessor.py  tpch_runqueries.py  verified_runqueries.py
research_loop/agent_primitives/: build.rs  emit_externs.py  verus_externs_parallel.rs.inc
research_loop/agents/: AGENTS.md  HOLDOUT_PROPOSALS.md  PRIMITIVES.md
research_loop/bench_bare/: Cargo.toml
research_loop/dafny_legacy/: README.md  harness.py  pipeline_columnar.py
research_loop/holdout/: README.md  gen_data.py  queries.py  results.json  run_holdout_bench.py
research_loop/holdout/bench_holdout/: Cargo.toml
research_loop/holdout/bench_holdout/src/: loader.rs  prepared.rs
research_loop/native_bridge/: Cargo.toml
research_loop/poc_alias/: q.dfy
research_loop/scripts/: bench_agent_primitives.py  install_verus.md
research_loop/templates/: runquery_agent.dfy  runquery_agent.rs
research_loop/testdata/: basic_anti_join_b.tbl  basic_bool_filter.tbl  basic_case_sum.tbl  basic_correlated_exists.tbl  basic_count_star.tbl  basic_cross_join_a.tbl  basic_distinct_proj.tbl  basic_exists_uncorrelated.tbl  basic_ilike.tbl  basic_inner_join_orders.tbl  basic_left_join_customers.tbl  basic_nway_join_c.tbl  basic_projection.tbl  basic_union_all.tbl
scripts/: build_ssb_flat_dataset.sh  demo.sh  demo_lib.py  ensure_ssb_dbgen.sh  export_tpch.py  export_tpch_lineitem.py  extern_demo.sh  flatten_ssb.py  generate_benchmark_overview_plot.py  mockdemo.sh  run_experiments.py  setup.sh
scripts/demo_view/: README.md  _paths.sh  follow-agent-log.sh  follow-events.sh  follow-pipeline-log.sh  follow-runquery.sh  follow-rust.sh  follow-spec.sh  watch-runquery.sh
transpiler/: README.md
transpiler/tests/: test_functional.py  test_unit.py
verus/: DB_EXTENSION_PATHS.md  README.md  __init__.py
verus/db_extension/: EXTENSION_TEMPLATE.md  Makefile  README.md  __init__.py  dataset_config.py  duckdb_memory.py  e2e_cached_rerun_h1.json  e2e_paths_h1.json  e2e_three_paths_h1.json  measure_e2e_cached_rerun.py  measure_e2e_paths.py  measure_e2e_three_paths.py  measure_pin_h1.py  pin_h1_measure.json  prepare_data.py  run_experiment.py  utils.py
verus/db_extension/rust_bridge/: Cargo.toml
verus/db_extension_lease/: README.md
verus/db_extension_lease/rust_bridge/: Cargo.toml  build.rs
verus/db_extension_lease/rust_bridge/src/: lease_h1.rs  lib.rs
verus/db_extension_ops/: Makefile  README.md
verus/db_extension_ops/rust_bridge/: Cargo.toml  build.rs
verus/db_extension_runtime/: README.md
verus/db_extension_storage/: README.md
verus/docs/: basic_sql_primer.md
verus/research_loop/: .gitignore  README.md  __init__.py  _transpiler.py  admit_runquery.py  agent_context.py  assemble_verified_program.py  basic_sql_extended_fixtures.py  basic_sql_fixtures.py  basic_sql_join_fixtures.py  basic_sql_proj_order_fixtures.py  benchmark_verified.py  config.env  exec_cols.py  harness.py  harness_legacy.py  lemma_flags.py  tpch_runqueries.py  verified_runqueries.py
verus/research_loop/agent_primitives/: Cargo.toml  __init__.py  build.rs  verus_externs_core.rs.inc
verus/research_loop/agent_primitives/src/: duckdb_export.rs  duckdb_pin.rs  duckdb_stream.rs  hash_join.rs  lib.rs  small_card_agg.rs  spill_hash.rs  stats.rs  vector_scan.rs
verus/research_loop/agent_primitives/tests/: equiv.rs
verus/tests/: test_adversarial_runquery.py  test_agent_primitives_flags.py  test_basic_sql_batch1.py  test_basic_sql_extended.py  test_basic_sql_joins.py  test_basic_sql_proj_order.py  test_basic_sql_set_cte.py  test_codegen_exec.py  test_sql_oracle.py  (+2 more)
verus_transpiler/: README.md  pyproject.toml
verus_transpiler/src/verus_transpiler/: __init__.py  codegen_exec.py  column_projection.py  templates.py  transpiler.py  windows.py
(+96 files in other folders)
