[project]
name = "lemma"
version = "0.1.0"
description = "Lemma — verified query synthesis as a DuckDB extension (Dafny proofs + native Rust)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sql-transpiler",
    "pytest>=9.1.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-rust>=0.24.2",
]

[tool.uv.workspace]
members = ["transpiler"]

[tool.uv.sources]
sql-transpiler = { workspace = true }

[dependency-groups]
dev = [
    "duckdb>=1.5.4",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "seaborn>=0.13.2",
]
