[project]
name = "verus-transpiler"
version = "0.1.0"
description = "SQL-to-Verus transpiler for verified analytical query specs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlglot>=30.11.0",
]

[project.optional-dependencies]
test = ["pytest>=9.1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verus_transpiler"]
