[package]
name = "lemma_storage_bridge"
version = "0.1.0"
edition = "2021"
description = "E2E timing for lemma_storage path (DataTable storage scan via duckdb.hpp)"

[[bin]]
name = "lemma_storage_h1_e2e"
path = "src/bin/lemma_storage_h1_e2e.rs"

[build-dependencies]
cc = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
