[package]
name = "lemma_ops_bridge"
version = "0.1.0"
edition = "2021"
description = "E2E timing for lemma_ops path (operator-shaped batch kernels)"

[[bin]]
name = "lemma_ops_h1_e2e"
path = "src/bin/lemma_ops_h1_e2e.rs"

[dependencies]
lemma_agent_primitives = { path = "../../research_loop/agent_primitives", default-features = false, features = ["duckdb_pin"] }

[build-dependencies]
cc = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
