[package]
name = "lemma_agent_primitives"
version = "0.1.0"
edition = "2021"
description = "TRUSTED extern helpers for Verus Lemma agents (GenDB-style primitives)"

[lib]
path = "src/lib.rs"

[features]
default = ["duckdb_pin"]
parallel = ["rayon"]
partitioned_join = ["parallel"]
vector_scan = []
simd = []
spill_hash = []
# Pin/lease against prebuilt libduckdb.so (no bundled DuckDB compile — keeps RAM low).
duckdb_pin = []

[dependencies]
rayon = { version = "1.10", optional = true }
serde_json = "1.0"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
